--- a/pom.xml
+++ b/pom.xml
@@ -60,8 +60,8 @@
             <version>1.3-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>br.com</groupId>
-            <artifactId>cifarma-spring-boot</artifactId>
+            <groupId>br.com.cifarma</groupId>
+            <artifactId>spring-boot</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
